basic looking glass added at /stats

--- a/APITaxi/templates/user.html
+++ b/APITaxi/templates/user.html
@@ -2,6 +2,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h4>{{ user.email}}</h4><br>
-<h3>Clé d'API : </h3> <h2>{{ user.apikey }}</h2>
+<h4>User: {{ user.email}}</h4>
+<h4>API Key: {{ user.apikey }}</h4>
 {% endblock %}
